# GameboyColor-Emulator

./: .gitignore  CMakeLists.txt  README.md  run.bat  run.sh
include/: cpu.hpp  types.hpp
